Day 17: introduce Strategy Engine (signal generation layer)
- Add TradingStrategy interface
- Add Signal record with Side enum
- Implement RandomStrategy (deterministic test)
- Add StrategyService orchestrator (stream API)
- Add /strategies/run endpoint
- Add unit tests
- Replace String side with Side enum across all classes